# tor-monitor

./: .gitignore  Cargo.toml  LICENSE  README.md
rmon/: Cargo.toml
rmon/src/: app.rs
rmon/src/metrics/: cpu.rs  disk.rs  uptime.rs
rmon/src/ui/: colors.rs  graphs.rs  layout.rs  render.rs
rmon/src/utils/: mod.rs
src/: main.rs
src/metrics/: memory.rs  mod.rs  network.rs
src/ui/: mod.rs  render.rs
src/utils/: format.rs  history.rs
